--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#B64E1A"
+    android:background="#301F16"
     android:padding="20dp"
     android:gravity="center_vertical"
     tools:context=".SplashScreen">
