--- a/app/src/main/res/layout/activity_donor_registration.xml
+++ b/app/src/main/res/layout/activity_donor_registration.xml
@@ -29,12 +29,11 @@
 
             <ImageView
 
-                android:layout_width="168dp"
-                android:layout_height="165dp"
+                android:layout_width="164dp"
+                android:layout_height="156dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="0dp"
-                android:src="@drawable/applogo"/>
-
+                android:src="@drawable/applogo" />
 
             <TextView
 
@@ -129,7 +128,7 @@
                 app:hintTextAppearance="@color/colorPrimary">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/RegisterPhoneNumber"
+                    android:id="@+id/registerPhoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_phone"
@@ -186,7 +185,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/registerPassword"
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_lock"
                     android:drawablePadding="10dp"
                     android:hint="Enter Phone number"
