--- a/app/src/main/res/layout/activity_recipient_registration.xml
+++ b/app/src/main/res/layout/activity_recipient_registration.xml
@@ -128,7 +128,7 @@
                 app:hintTextAppearance="@color/colorPrimary">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/RegisterPhoneNumber"
+                    android:id="@+id/registerPhoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_phone"
@@ -185,10 +185,10 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/registerPassword"
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_lock"
                     android:drawablePadding="10dp"
-                    android:hint="Enter Phone number"
+                    android:hint="Enter Password"
                     android:inputType="textPassword"
                     android:textColor="#000"
                     android:textColorHint="#000"
