--- a/app/src/main/res/layout/user_displayed_layout.xml
+++ b/app/src/main/res/layout/user_displayed_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/mainLayout"
@@ -54,6 +54,16 @@
                 android:textSize="18sp"
                 android:layout_gravity="center"
                 android:textColor="#000"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/phoneNumber"
+                android:layout_margin="5dp"
+                android:textSize="18sp"
+                android:layout_gravity="center"
+                android:textColor="#000"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
@@ -75,6 +85,7 @@
             android:gravity="center_vertical"
             android:background="@drawable/buttons_background"
             android:text="Email"
+            android:visibility="gone"
             android:textAllCaps="false"/>
 
     </LinearLayout>
