--- a/app/src/main/res/layout/user_displayed_layout.xml
+++ b/app/src/main/res/layout/user_displayed_layout.xml
@@ -39,10 +39,9 @@
 
             <TextView
                 android:id="@+id/userName"
-                android:layout_margin="5dp"
+                android:layout_margin="2dp"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_gravity="center"
+                android:textAlignment="textStart"
                 android:textColor="#000"
                 android:textAllCaps="true"
                 android:layout_width="match_parent"
@@ -50,28 +49,27 @@
 
             <TextView
                 android:id="@+id/userEmail"
-                android:layout_margin="5dp"
+                android:layout_margin="2dp"
                 android:textSize="18sp"
-                android:layout_gravity="center"
+                android:textAlignment="textStart"
                 android:textColor="#000"
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/phoneNumber"
-                android:layout_margin="5dp"
+                android:layout_margin="2dp"
                 android:textSize="18sp"
-                android:layout_gravity="center"
+                android:textAlignment="textStart"
                 android:textColor="#000"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/bloodGroup"
-                android:layout_margin="5dp"
+                android:layout_margin="2dp"
                 android:textSize="18sp"
-                android:layout_gravity="center"
+                android:textAlignment="textStart"
                 android:textColor="#000"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
